# clvm_tools_rs

./: .gitignore  .gitmodules  CHANGELOG.md  COMPILER.md  Cargo.toml  GETTING_STARTED.md  HOW_CHIALISP_IS_COMPILED.md  Makefile  README.md  advanced-macros.md  main.sym  pyproject.toml  rust-toolchain.toml  stable-constants-how.txt  test-game-referee.sh  types.md
.github/workflows/: alpine-wheel-docker.yml  audit-check.yml  build-arm64-wheels.yml  build-crate.yml  build-m1-wheel.yml  build-riscv.yml  build-test.yml  build-wheels.yml  extensive-tests.yml  npm-publish.yml  run-tests.yml  verify-recompilation-cl21.yml  verify-recompilation-classic.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compile-and-execute.rs
mock-test/: .babelrc  Makefile  mock.js  package-lock.json  package.json  stepper.js  webpack.config.js
mock-test/tests/: fact.clvm.hex  fact.sym  pwcoin.cl
pgen/: Cargo.toml  pgen.rs
python/clvm_tools_rs/: __init__.py  cmds.py
resources/alpine/: Dockerfile  build-alpine.sh  build-openssl.sh  wheel.diff
resources/coverage/: distill_coverage_results.py  run_coverage.py
resources/ported-classic/: nodepath.clib  optimize.clsp  pattern-match.clib
resources/tests/: all_operators-0_1_43.clvm  all_operators.clsp  all_operators_inputs.clvm  all_operators_results.clvm  assert.clvm  assert.clvm.out  big_assemble_out.txt  big_decode_out.txt  check-recompiles.py  cse-bad-letstar.clsp  cse-bad.clsp  cse-complex-21.clsp  cse-overlap.clsp  cse-tricky-basic.clsp  did_innerpuz.clsp  edit-poetry.py  embed.sexp  hex-embed-01.hex  linux-install-node.sh  mandelbrot-cldb.py  rps-referee-uncaptured.clsp  rps-referee.clsp  secret_number.cl  secret_number2.cl  simple_deinline_case_23.clsp  test-clvm-recompile-behavior.py  test-defconstant-tree.clib  test_assign_path_opt.clsp  test_binutils_api.py  test_clvm_step.py  test_compile_from_string.py  test_simple_subexp.clsp  test_string_repr.clsp  test_treehash_constant.cl  test_treehash_constant_2.cl  test_treehash_constant_21.cl  test_treehash_constant_21_2.cl  test_user_path_opt_0.clsp  testbuild.py
resources/tests/bls/: classic-bls-op-test-1.clsp  classic-bls-verify-signature.clsp  coinid-fail.clsp  coinid-good.clsp  modern-bls-op-test-1.clsp  modern-bls-verify-signature.clsp
resources/tests/bridge-includes/: curry.clib  merkle_utils.clib  sha256tree.clib  utility_macros.clib
resources/tests/bridgeref/: attribution.md  merkle_tree_a2c.clvm.hex.reference  merkle_tree_a2c.sym.reference  validation_taproot.clsp  validation_taproot.clvm.hex.reference  validation_taproot.sym.reference
resources/tests/chia-gaming/: test-last.clsp
resources/tests/cldb_tree/: hex.json  pool_member_innerpuz.cl  pool_member_innerpuz.hex  pool_member_innerpuz_args.cl  pool_member_innerpuz_args.hex  pool_member_innerpuz_extra.sym  pool_member_innerpuz_ref.sym  pool_member_innerpuz_run.json  pre_hex.json  test.json  test_rec_1.cl
resources/tests/deinline/: test-basic-deinline.clsp
resources/tests/game-referee-after-cl21/: smoke_test_deep_compare.sym  smoke_test_permutations.sym  smoke_test_sort.sym  test_handcalc.clsp  test_handcalc.sym  test_library_basics.py  test_permutations.sym  test_prepend.sym  test_range.clvm.hex  test_range.sym  test_reverse.sym  test_sort.sym  testreferee.py
resources/tests/game-referee-in-cl21/: smoke_test_deep_compare.clvm.hex.reference  smoke_test_deep_compare.sym  smoke_test_permutations.clvm.hex  smoke_test_permutations.clvm.hex.reference  smoke_test_permutations.sym  smoke_test_sort.clvm.hex.reference  smoke_test_sort.sym  test_handcalc.clsp  test_handcalc.clvm.hex  test_handcalc.clvm.hex.reference  test_handcalc.sym  test_library_basics.py  test_permutations.clvm.hex  test_permutations.clvm.hex.reference  test_permutations.sym  test_prepend.clvm.hex.reference  test_prepend.sym  test_range.sym  test_reverse.sym  test_sort.clvm.hex  test_sort.clvm.hex.reference  test_sort.sym
resources/tests/game-referee-in-cl23/: deep_compare_t2.clsp  detectwrap.clinc  filtermap.clinc  handbitmap.clinc  main.sym  noncegame.clsp  prefix.clinc  slice_runner.clsp  smoke_test_deep_compare.clsp  smoke_test_deep_compare.sym  smoke_test_permutations.clsp  smoke_test_permutations.clvm.hex  smoke_test_permutations.sym  smoke_test_sort.clsp  smoke_test_sort.sym  steprun.py  test_detectwrap.clsp  test_handbitmap.clsp  test_library_basics.py  test_permutations.clsp  test_permutations.clvm.hex  test_permutations.sym  test_prepend.clsp  test_prepend.sym  test_range.clsp  test_range.sym  test_reverse.clsp  test_reverse.clvm.hex  test_reverse.sym  test_slice.clsp  test_sort.clsp  test_sort.clvm.hex  test_sort.sym  testnoncegame.py  testreferee.py  testrockpaperscissors.py
resources/tests/gameref21/: attribution.md  referee.clsp  (+24 more)
src/: lib.rs
src/classic/: mod.rs
src/compiler/: cldb.rs  cldb_hierarchy.rs  clvm.rs  codegen.rs  compiler.rs  comptypes.rs  debug.rs  dialect.rs  evaluate.rs  frontend.rs  frontend2.rs  fuzz.rs  fuzzer.rs  gensym.rs  importer.rs  inline.rs  lambda.rs  mod.rs  optimize.rs  preprocessor.rs  prims.rs  rename.rs  repl.rs  resolve.rs  runtypes.rs  sexp.rs  srcloc.rs  stackvisit.rs  test_deinline.rs  typecheck.rs  typechia.rs  untype.rs  usecheck.rs
src/fuzzing/: fuzzrng.rs  mod.rs
src/py/: api.rs  binutils.rs  cmds.rs  mod.rs  pyval.rs
src/tests/: mod.rs  util.rs
src/util/: mod.rs
src/wasm/: api.rs  jsval.rs  mod.rs
support/: feature-fishing.py  install_deps.sh  recompile_check.py  recompile_check.py.use-deployed-hash-list.diff  test-game-referee.sh  verify_compiler_version.sh  wheelname.py
test/proggen/: Cargo.toml
test/proggen/src/: main.rs
tmp/: pyproject.toml
tmp/clvm_tools_rs/: __init__.py
wasm/: Cargo.toml  README.md  rust-toolchain.toml
wasm/src/: api.rs  compile.rs  dialect.rs  jsval.rs  mod.rs  objects.rs
wasm/tests/: index.js
wasm/tests/clvm-tools-interface/: package.json  tstestconfig.json
wasm/tests/clvm-tools-interface/content/: test-include.clinc  test-with-include.clsp  test_cat2_program.hex
wasm/tests/clvm-tools-interface/src/lib/tests/: index.test.ts  random.test.ts
(+254 files in other folders)
