[package]
name = "clvm_tools_rs"
version = "0.1.40"
edition = "2018"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
description = "tools for working with chialisp language; compiler, repl, python and wasm bindings"
homepage = "https://prozacchiwawa.github.io/clvm_tools_rs/"
readme = "README.md"
repository = "https://github.com/Chia-Network/clvm_tools_rs"
license = "Apache-2.0"
keywords = ["chia", "chialisp", "clvm"]
categories = ["command-line-utilities"]

[package.metadata.maturin]
python-source = "python"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
num-bigint = { version = "0.4.0", features = ["serde"] }
bls12_381 = { version = "=0.8.0", features = ["experimental"] }
bytestream = "0.4.1"
num-traits = "0.2.14"
lazy_static = "1.4.0"
unicode-segmentation = "1.8.0"
derivative = "2.2.0"
encoding8 = "0.3.2"
num = "0.4.0"
indoc = "1.0"
do-notation = "0.1.3"
serde_json = "1.0"
sha2 = "0.9.5"
tempfile = "3.10.1"
clvmr = { version = "0.3.2", features = ["pre-eval"] }
env_logger = { version = "0.11.3", features = ["humantime","regex"], default-features=false }
env_filter = "=0.1.0"
log = "0.4.17"
binascii = "0.1.4"
yaml-rust = "0.4"
linked-hash-map = "0.5.6"
serde = { version = "1.0", features = ["derive", "rc"] }
regex = "1.8.4"

[dependencies.pyo3]
version = "0.20.2"
features = ["abi3-py38", "extension-module"]
optional = true

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
lfsr = "0.3.0"
ctor = "0.2.7"

[lib]
name = "clvm_tools_rs"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["dep:pyo3"]
default = []

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3.25"
js-sys = "0.3.58"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_family="wasm"))'.dependencies]
getrandom = { version = "0.2" }

[build-dependencies]
pyo3-build-config = "0.15.1"

[[bin]]
name = "opd"
path = "src/classic/bins/opd.rs"

[[bin]]
name = "opc"
path = "src/classic/bins/opc.rs"

[[bin]]
name = "run"
path = "src/classic/bins/run.rs"

[[bin]]
name = "brun"
path = "src/classic/bins/brun.rs"

[[bin]]
name = "cldb"
path = "src/classic/bins/cldb.rs"

[[bin]]
name = "shrink"
path = "src/classic/bins/shrink.rs"

[[bin]]
name = "clisp_to_json"
path = "src/classic/bins/clisp_to_json.rs"

[[bin]]
name = "repl"
path = "src/classic/bins/repl.rs"
