[package]
name = "clvm_tools_rs"
version = "0.2.0"
edition = "2018"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
description = "tools for working with chialisp language; compiler, repl, python and wasm bindings"
readme = "README.md"
repository = "https://github.com/Chia-Network/clvm_tools_rs"
license = "Apache-2.0"
keywords = ["chia", "chialisp", "clvm"]
categories = ["command-line-utilities"]

[package.metadata.maturin]
python-source = "python"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
num-bigint = { version = "0.4.0", features = ["serde"] }
num-traits = "0.2.14"
lazy_static = "1.4.0"
unicode-segmentation = "1.12.0"
num = "0.4.3"
indoc = "2.0"
do-notation = "0.1.3"
serde_json = "1.0"
sha2 = "0.9.5"
tempfile = "3.19.1"
clvmr = { version = "0.13.1", features = ["pre-eval"] }
binascii = "0.1.4"
yaml-rust2 = "0.10.1"
hashlink = "0.10.0"
serde = { version = "1.0", features = ["derive", "rc"] }
regex = "1.11.1"
rand = { version = "0.9.0", optional = true }
rand_chacha = { version = "0.9.0", optional = true }
lfsr = { version = "0.3.0", optional = true }
chia-bls = "0.22.0"

[dependencies.pyo3]
version = "0.24.1"
features = ["abi3-py39", "extension-module"]
optional = true

[dev-dependencies]
rand = "0.9.0"
rand_chacha = "0.9.0"
lfsr = "0.3.0"

[lib]
name = "clvm_tools_rs"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["dep:pyo3"]
fuzz = ["dep:rand", "dep:rand_chacha", "dep:lfsr"]
default = []

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
js-sys = "0.3.58"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_family="wasm"))'.dependencies]
getrandom = { version = "0.2" }

[build-dependencies]
pyo3-build-config = "0.24.0"

[[bin]]
name = "opd"
path = "src/classic/bins/opd.rs"

[[bin]]
name = "opc"
path = "src/classic/bins/opc.rs"

[[bin]]
name = "run"
path = "src/classic/bins/run.rs"

[[bin]]
name = "brun"
path = "src/classic/bins/brun.rs"

[[bin]]
name = "cldb"
path = "src/classic/bins/cldb.rs"

[[bin]]
name = "shrink"
path = "src/classic/bins/shrink.rs"

[[bin]]
name = "clisp_to_json"
path = "src/classic/bins/clisp_to_json.rs"

[[bin]]
name = "repl"
path = "src/classic/bins/repl.rs"
