[build-system]
requires = ["maturin>=1.1.0,<1.3.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["extension-module","debug-print"]
python-source = "python"

[project]
name = "clvm_tools_rs"

[project.scripts]
brun = "clvm_tools_rs.cmds:brun"
run = "clvm_tools_rs.cmds:run"
opc = "clvm_tools_rs.cmds:opc"
opd = "clvm_tools_rs.cmds:opd"
cldb = "clvm_tools_rs.cmds:cldb"
