[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["extension-module"]

[project]
name = "clvm_tools_rs"
dynamic = ["version"]

# - Reenable these when we switch over from clvm_tools.
# [project.scripts]
# brun = "clvm_tools_rs.cmds:brun"
# run = "clvm_tools_rs.cmds:run"
# opc = "clvm_tools_rs.cmds:opc"
# opd = "clvm_tools_rs.cmds:opd"
# cldb = "clvm_tools_rs.cmds:cldb"
