[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["extension-module"]

[project]
name = "chialisp"
dynamic = ["version"]

# - Reenable these when we switch over from clvm_tools.
# [project.scripts]
# brun = "chialisp.cmds:brun"
# run = "chialisp.cmds:run"
# opc = "chialisp.cmds:opc"
# opd = "chialisp.cmds:opd"
# cldb = "chialisp.cmds:cldb"
