[package]
name = "clvm_tools_rs-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
clvmr = "0.1.24"
libfuzzer-sys = "0.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
random_lfsr_256_galois = "22.10.0"
env_logger = "0.9.0"
log = "0.4.17"
lazy_static = "1.4.0"

[dependencies.clvm_tools_rs]
path = ".."
default-features = false
features = ["fuzzer"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "compile-and-execute"
path = "fuzz_targets/compile-and-execute.rs"
test = false
doc = false
