[package]
name = "clvm_tools_wasm"
version = "0.1.30"
edition = "2018"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
description = "tools for working with chialisp language; compiler, repl, python and wasm bindings"
homepage = "https://prozacchiwawa.github.io/clvm_tools_rs/"
readme = "README.md"
repository = "https://github.com/Chia-Network/clvm_tools_rs"
license = "MIT"
keywords = ["chia", "chialisp", "clvm"]
categories = ["command-line-utilities"]

[lib]
name = "clvm_tools_wasm"
crate-type = ["cdylib"]
path = "src/mod.rs"

[dependencies]
clvm_tools_rs = { path= "..", features = [] }
clvmr = "0.1.24"
wasm-bindgen = "=0.2.83"
wasm-bindgen-test = "=0.3.25"
js-sys = "0.3.60"
