[package]
name = "clvm_tools_wasm"
version = "0.1.45"
edition = "2018"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
description = "tools for working with chialisp language; compiler, repl, python and wasm bindings"
homepage = "https://prozacchiwawa.github.io/clvm_tools_rs/"
readme = "README.md"
repository = "https://github.com/Chia-Network/clvm_tools_rs"
license = "MIT"
keywords = ["chia", "chialisp", "clvm"]
categories = ["command-line-utilities"]

[lib]
name = "clvm_tools_wasm"
crate-type = ["cdylib"]
path = "src/mod.rs"

[dependencies]
clvm_tools_rs = { path= "..", features = [] }
clvmr = { git = "https://github.com/Chia-Network/clvm_rs", rev = "2f413e72fcf1bcafa4a3117f2c2a0a3a0e7e1c6b", features = ["pre-eval"] }
wasm-bindgen = "=0.2.92"
wasm-bindgen-test = "=0.3.25"
js-sys = "0.3.60"
num-bigint = "0.4.0"
num-traits = "0.2.15"
